[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-playlist-helper"
version = "0.1.0"
description = "A Click CLI for Spotify playlist unions and diffs"
readme = "playlist-tool/README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1", "spotipy>=2.25"]

[project.scripts]
spotify-playlist-helper = "spotify_playlist_helper.cli:cli"

[tool.setuptools]
package-dir = { "" = "playlist-tool/src" }

[tool.setuptools.packages.find]
where = ["playlist-tool/src"]

[tool.pytest.ini_options]
testpaths = ["playlist-tool/tests"]
